[package]
name = "plygui"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]

[lib]
name = "plygui"
path = "src/lib.rs"

[dependencies]
plygui-api = { version = "0.0.1", path = "../plygui-api" }

[target.'cfg(target_os = "windows")'.dependencies]
plygui-win32 = { version = "0.0.1", path = "../plygui-win32", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
plygui-cocoa = { version = "0.0.1", path = "../plygui-cocoa", optional = true }

[features]
win32 = ["plygui-win32"]
cocoa = ["plygui-cocoa"]
native = ["win32", "cocoa"]
default = ["native"]
markup = ["plygui-api/markup", "plygui-win32/markup", "plygui-cocoa/markup"]