[package]

name = "plygui-gtk"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]
build = "build.rs"

[lib]
name = "plygui_gtk"
path = "src/lib.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../../api"}
gtk = { version = "^0.4", features = ["v3_18"] }
gdk = { version = "^0.8", features = ["v3_18"] }
glib = { version = "^0.5" }
glib-sys = { version = "^0.6" }
gobject-sys = { version = "^0.6" }
gtk-sys = { version = "^0.6" }
lazy_static = { version = "^1.0" }
libc = { version = "^0.2" }
pango = { version = "^0.4" }

[build-dependencies]
cc = { version = "^1.0" }
pkg-config = { version = "^0.3" }

[features]
markup = ["plygui-api/markup"]